@@ -2,6 +2,7 @@ xx Jan 2007: 0.3.6 Miek <miek@miek.nl>
   -- minor bugfixes --
    * Small fixes for rdup-dump (Fabio Rossi)
    * rdup-dump, rdup-snap-shot; $@ quoting fix (Farrukh Ahmad)
+   * sh-wrappers: print the unknown option when encountering one
 
 
 27 Dec 2006: 0.3.5 Miek <miek@miek.nl>
